# zoommate.in

./: .gitignore  .replit  APPLY_FIXES.sh  APP_STRUCTURE.md  CLAUDE.md  CRITICAL_BUGS_FIX.md  FIX_GUIDE.md  README.md  TROUBLESHOOT.md  install.sh  package-lock.json  package.json  replit.md  test_db.ts
.claude/: settings.local.json
.opencode/: opencode.json
client/: index.html
client/public/: pcm-processor.js
client/src/: App.tsx  index.css
desktop/: .env.example  TAURI_MIGRATION.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop/electron/: main.ts  preload.ts
desktop/src/: App.js  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  oauth.rs
docs/: transcript-pipeline-blocker-matrix.md
migrations/: 0001_add_practice_mode.sql  0002_add_google_auth.sql  0003_add_email_verification.sql
scripts/: compare-ws-sse.ts  seed-products.ts  transcriptFramingRegression.ts
server/: emailService.ts  index.ts  llmRouter.ts  llmRouter2.ts  llmStream.ts  memoryExtractor.ts  openai.ts  prompt.ts  rag.ts  routes.ts  sessionReview.ts  settingsCrypto.ts  storage.ts
server/assist/: answerStream.ts  followupResolver.ts  heuristicAnswerCache.ts  onEnter.ts  onEnterMemory.ts  orchestrator.ts  persistRetry.ts  questionDetect.ts  refinePass.ts  responseParser.ts  (+4 more)
shared/: followup.ts  questionDetection.ts  schema.ts  technicalIntent.ts  technicalSubtype.ts
(+49 files in other folders)
