[package]
name = "zoommate"
version = "1.0.0"
description = "Zoommate — AI Interview Copilot"
authors = ["Zoommate"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "zoommate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico", "devtools"] }
tauri-plugin-store    = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell    = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
tiny_http  = "0.12"
rand       = "0.8"
hex        = "0.4"
url        = "2"
urlencoding = "2"
log        = "0.4"
env_logger = "0.11"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
